--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Portfolio website of Sabina Kazantseva" />
+    <title>Sabina Kazantseva portfolio</title>
 </head>
+
 <body>
     <p>Sabina Kazantseva</p>
-    <p>About</p>
-    <p>Hello! My name is Sabina, and I am an aspiring web developer with a passion for creating captivating online experiences. While I may not have professional web development experience just yet, I am a dedicated and self-motivated individual eager to learn and grow in this exciting field. I have spent countless hours honing my skills in HTML, CSS, and JavaScript, and I am constantly exploring new technologies and trends in web development. I am driven by a strong desire to bring ideas to life through innovative and visually appealing websites. With a keen eye for design and a meticulous attention to detail, I am committed to delivering user-friendly and engaging digital solutions. I am ready to embark on this journey of becoming a proficient web developer and contribute my unique perspective to the ever-evolving world of web design.</p>
-    <p>Experience</p>
+    <h1>About</h1>
+    <p>Hello! My name is Sabina, and I am an aspiring web developer with a passion for creating captivating online
+        experiences. While I may not have professional web development experience just yet, I am a dedicated and
+        self-motivated individual eager to learn and grow in this exciting field. I have spent countless hours honing my
+        skills in HTML, CSS, and JavaScript, and I am constantly exploring new technologies and trends in web
+        development. I am driven by a strong desire to bring ideas to life through innovative and visually appealing
+        websites. With a keen eye for design and a meticulous attention to detail, I am committed to delivering
+        user-friendly and engaging digital solutions. I am ready to embark on this journey of becoming a proficient web
+        developer and contribute my unique perspective to the ever-evolving world of web design.</p>
+    <h1>Experience</h1>
     <p>Computer tutor: help students at the local college with coding assignments.
     </p>
-    <p>Connect</p>
-    <p>Email: sabinakazantceva@gmail.com</p>
-    <p>GitHub: https://github.com/Sabina-Kazantseva</p>
-    <p>LinkedIn:</p>
+    <h1>Connect</h1>
+    <ul>
+        <li>Email: sabinakazantceva@gmail.com</li>
+        <li>GitHub: https://github.com/Sabina-Kazantseva</li>
+        <li>LinkedIn:</li>
+    </ul>
+    <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300" alt="web development"/>
 </body>
+
 </html>
