Create index.js file, add skills.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p>Sabina Kazantseva</p>
+    <p><stronga>Sabina Kazantseva</stronga></p>
     <h1>About</h1>
     <p>Hello! My name is Sabina, and I am an aspiring web developer with a passion for creating captivating online
         experiences. While I may not have professional web development experience just yet, I am a dedicated and
@@ -23,13 +23,19 @@
     <h1>Experience</h1>
     <p>Computer tutor: help students at the local college with coding assignments.
     </p>
-    <h1>Connect</h1>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul></ul>
+    </section>
+    <h1><em>Connect</em></h1>
     <ul>
-        <li>Email: sabinakazantceva@gmail.com</li>
+        <li>Email: <a href="malito:sabinakazantceva@gmail.com?subject=Hi%20there!">sabinakazantceva@gmail.com</a></li>
         <li>GitHub: https://github.com/Sabina-Kazantseva</li>
         <li>LinkedIn:</li>
     </ul>
-    <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300" alt="web development"/>
+    <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300" alt="web development" />
+    <footer></footer>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
