Handle message form submit and Display messages in a list

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
     <h1><em>Connect</em></h1>
     <ul>
-        <li>Email: <a href="malito:sabinakazantceva@gmail.com?subject=Hi%20there!">sabinakazantceva@gmail.com</a></li>
+        <li>Email: <a href="mailto:sabinakazantceva@gmail.com?subject=Hi%20there!">sabinakazantceva@gmail.com</a></li>
         <li>GitHub: https://github.com/Sabina-Kazantseva</li>
         <li>LinkedIn:</li>
     </ul>
@@ -44,7 +44,8 @@
             <label for="usersEmail">Email:</label>
             <input type="email" id="usersEmail" name="usersEmail" placeholder="peterparker@gmail.com" required><br>
             <label for="usersMessage">Message:</label>
-            <textarea id="usersMessage" name="usersMessage" placeholder="Hi, I'm Peter." value="123" required></textarea><br>
+            <textarea id="usersMessage" name="usersMessage" placeholder="Hi, I'm Peter." value="123"
+                required></textarea><br>
             <button type="submit">Submit</button>
         </form>
     </section>
