--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio website of Sabina Kazantseva" />
     <title>Sabina Kazantseva portfolio</title>
+    <style>
+        p{
+            font-size: 20 px;
+            font-weight:absolute;
+        }
+    </style>
 </head>
 
-<body>
+<body style="background-color: azure;">
     <p>
         <stronga>Sabina Kazantseva</stronga>
     </p>
@@ -22,14 +28,14 @@
         websites. With a keen eye for design and a meticulous attention to detail, I am committed to delivering
         user-friendly and engaging digital solutions. I am ready to embark on this journey of becoming a proficient web
         developer and contribute my unique perspective to the ever-evolving world of web design.</p>
-    <h1>Experience</h1>
+    <h1 style="color: rgb(52, 136, 169);">Experience</h1>
     <p>Computer tutor: help students at the local college with coding assignments.
     </p>
     <section id="skills">
-        <h2>Skills</h2>
+        <h2 style="color: rgb(52, 136, 169);">Skills</h2>
         <ul></ul>
     </section>
-    <h1><em>Connect</em></h1>
+    <h1 style="color: rgb(52, 136, 169);"><em>Connect</em></h1>
     <ul>
         <li>Email: <a href="mailto:sabinakazantceva@gmail.com?subject=Hi%20there!">sabinakazantceva@gmail.com</a></li>
         <li>GitHub: https://github.com/Sabina-Kazantseva</li>
@@ -37,7 +43,7 @@
     </ul>
     <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300" alt="web development" />
     <section>
-        <h2>Leave a Message</h2>
+        <h2 style="color: rgb(52, 136, 169);">Leave a Message</h2>
         <form name="leave_message">
             <label for="usersName">Name:</label>
             <input type="text" id="usersName" name="usersName" placeholder="Peter Parker" required><br>
@@ -50,7 +56,7 @@
         </form>
     </section>
     <section id="messages">
-        <h2>Messages</h2>
+        <h2 style="color: rgb(52, 136, 169);">Messages</h2>
         <ul></ul>
     </section>
     <footer></footer>
