--- a/index.html
+++ b/index.html
@@ -7,32 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio website of Sabina Kazantseva" />
     <title>Sabina Kazantseva portfolio</title>
-<link rel="stylesheet" href="css/index.css">
-<link href="https://fonts.googleapis.com/css2?family=<font-family>&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=<font-family>&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-    <div class="container">
+    <section class="top-container">
         <div id="profile-picture">
-            <img src="./images/profile.jpg" alt="Your Name" width="300" height="300">
+            <img src="./images/profile.jpg" alt="Sabina in a black dress" width="300" height="300">
         </div>
-        <p>
-            <strong>Sabina Kazantseva</strong>
-        <div id="about-section">
-            <h1>About</h1>
-            <p>Hello! My name is Sabina, and I am an aspiring web developer with a passion for creating captivating online
-                experiences. While I may not have professional web development experience just yet, I am a dedicated and
-                self-motivated individual eager to learn and grow in this exciting field. I have spent countless hours
-                honing my
-                skills in HTML, CSS, and JavaScript, and I am constantly exploring new technologies and trends in web
-                development. I am driven by a strong desire to bring ideas to life through innovative and visually appealing
-                websites. With a keen eye for design and a meticulous attention to detail, I am committed to delivering
-                user-friendly and engaging digital solutions. I am ready to embark on this journey of becoming a proficient
-                web
-                developer and contribute my unique perspective to the ever-evolving world of web design.</p>
+        <div class="about">
+            <h1 class="my-name">Sabina Kazantseva </h1>
+            <div id="about-content">
+                <h2>About</h2>
+                <p class="about-story">Hello! My name is Sabina, and I am an aspiring web developer with a passion for
+                    creating captivating online
+                    experiences. While I may not have professional web development experience just yet, I am a dedicated
+                    and
+                    self-motivated individual eager to learn and grow in this exciting field. I have spent countless
+                    hours
+                    honing my
+                    skills in HTML, CSS, and JavaScript, and I am constantly exploring new technologies and trends in
+                    web
+                    development. I am driven by a strong desire to bring ideas to life through innovative and visually
+                    appealing
+                    websites. With a keen eye for design and a meticulous attention to detail, I am committed to
+                    delivering
+                    user-friendly and engaging digital solutions. I am ready to embark on this journey of becoming a
+                    proficient
+                    web
+                    developer and contribute my unique perspective to the ever-evolving world of web design.</p>
+            </div>
         </div>
-    </div>
+    </section>
     <h1>Experience</h1>
     <ul id="Experience"></ul>
     <p>Computer tutor: help students at the local college with coding assignments.
@@ -47,22 +58,31 @@
         <li>GitHub: https://github.com/Sabina-Kazantseva</li>
         <li>LinkedIn:</li>
     </ul>
-    <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300" alt="web development" />
+    <div class="computer-img">
+        <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300"
+            alt="laptop with a quote on the screen" />
+    </div>
     <section>
-        <h2>Leave a Message</h2>
+        <h2 class="message">Leave a Message</h2>
         <form name="leave_message">
-            <label for="usersName">Name:</label>
-            <input type="text" id="usersName" name="usersName" placeholder="Peter Parker" required><br>
-            <label for="usersEmail">Email:</label>
-            <input type="email" id="usersEmail" name="usersEmail" placeholder="peterparker@gmail.com" required><br>
-            <label for="usersMessage">Message:</label>
-            <textarea id="usersMessage" name="usersMessage" placeholder="Hi, I'm Peter." value="123"
-                required></textarea><br>
-            <button type="submit">Submit</button>
+            <div class="input-container">
+                <label for="usersName">Name:</label>
+                <input type="text" id="usersName" name="usersName" placeholder="Peter Parker" required>
+            </div>
+            <div class="input-container">
+                <label for="usersEmail">Email:</label>
+                <input type="email" id="usersEmail" name="usersEmail" placeholder="peterparker@gmail.com" required>
+            </div>
+            <div class="input-container">
+                <label for="usersMessage">Message:</label>
+                <textarea id="usersMessage" name="usersMessage" placeholder="Hi, I'm Peter." value="123"
+                    required></textarea><br>
+            </div>
+            <button class="submit-btn" type="submit">Submit</button>
         </form>
     </section>
     <section id="messages">
-        <h2 style="color: rgb(52, 136, 169);">Messages</h2>
+        <h2>Messages</h2>
         <ul></ul>
     </section>
     <footer></footer>
