--- a/index.html
+++ b/index.html
@@ -16,94 +16,102 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="nav-menu">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#connect">Connect</a></li>
-                <li><a href="#messages">Messages</a></li>
-            </ul>
-        </nav>
-    </header>
+    <main class="main">
+        <header class="navigation">
+            <nav class="nav-menu">
+                <ul class="nav-menu-list">
+                    <li class="nav-menu-list-item"><a class="nav-menu-list-link" href="#about">About</a></li>
+                    <li class="nav-menu-list-item"><a class="nav-menu-list-link" href="#experience">Experience</a></li>
+                    <li class="nav-menu-list-item"><a class="nav-menu-list-link" href="#skills">Skills</a></li>
+                    <li class="nav-menu-list-item"><a class="nav-menu-list-link" href="#connect">Connect</a></li>
+                    <li class="nav-menu-list-item"><a class="nav-menu-list-link" href="#messages">Messages</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <section class="top-container">
-        <div id="profile-picture">
-            <img src="./images/profile.jpg" alt="Sabina in a black dress" width="300" height="300">
-        </div>
-        <div class="about">
-            <h1 class="my-name">Sabina Kazantseva </h1>
-            <div id="about-content">
-                <h2 id="about">About</h2>
-                <p class="about-story">Hello! My name is Sabina, and I am an aspiring web developer with a passion for
-                    creating captivating online
-                    experiences. While I may not have professional web development experience just yet, I am a dedicated
-                    and
-                    self-motivated individual eager to learn and grow in this exciting field. I have spent countless
-                    hours
-                    honing my
-                    skills in HTML, CSS, and JavaScript, and I am constantly exploring new technologies and trends in
-                    web
-                    development. I am driven by a strong desire to bring ideas to life through innovative and visually
-                    appealing
-                    websites. With a keen eye for design and a meticulous attention to detail, I am committed to
-                    delivering
-                    user-friendly and engaging digital solutions. I am ready to embark on this journey of becoming a
-                    proficient
-                    web
-                    developer and contribute my unique perspective to the ever-evolving world of web design.</p>
+        <section class="top-container">
+            <div class="profile-picture-container">
+                <img class="profile-picture" src="./images/profile.jpg" alt="Sabina in a black dress">
             </div>
-        </div>
-    </section>
-    <h1 id="experience">Experience</h1>
-    <div class="experience-grid">
-        <div class="experience-item">
-            <ul id="Experience"></ul>
-            <p>Computer tutor: help students at the local college with coding assignments.
+            <div class="about">
+                <h1 class="my-name">Sabina Kazantseva </h1>
+                <div id="about-content">
+                    <h2 id="about">About</h2>
+                    <p class="about-story">Hello! My name is Sabina, and I am an aspiring web developer with a passion
+                        for
+                        creating captivating online
+                        experiences. While I may not have professional web development experience just yet, I am a
+                        dedicated
+                        and
+                        self-motivated individual eager to learn and grow in this exciting field. I have spent countless
+                        hours
+                        honing my
+                        skills in HTML, CSS, and JavaScript, and I am constantly exploring new technologies and trends
+                        in
+                        web
+                        development. I am driven by a strong desire to bring ideas to life through innovative and
+                        visually
+                        appealing
+                        websites. With a keen eye for design and a meticulous attention to detail, I am committed to
+                        delivering
+                        user-friendly and engaging digital solutions. I am ready to embark on this journey of becoming a
+                        proficient
+                        web
+                        developer and contribute my unique perspective to the ever-evolving world of web design.</p>
+                </div>
+            </div>
+        </section>
+        <div id="experience" class="experience">
+            <h1>Experience</h1>
+            <div class="experience-item">
+                <ul id="Experience"></ul>
+                <p>Computer tutor: help students at the local college with coding assignments.
 
-            </p>
-        </div>
-        <section id="skills">
-            <h2>Skills</h2>
-            <ul></ul>
-        </section>
-        <h1 id="connect"><em>Connect</em></h1>
-        <ul>
-            <li>Email: <a href="mailto:sabinakazantceva@gmail.com?subject=Hi%20there!">sabinakazantceva@gmail.com</a>
-            </li>
-            <li>GitHub: https://github.com/Sabina-Kazantseva</li>
-            <li>LinkedIn:</li>
-        </ul>
-        <div class="computer-img">
-            <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300"
-                alt="laptop with a quote on the screen" />
-        </div>
-        <section>
-            <h2 class="message">Leave a Message</h2>
-            <form name="leave_message" class="message-form">
-                <div class="input-container">
-                    <label for="usersName">Name:</label>
-                    <input type="text" id="usersName" name="usersName" placeholder="Peter Parker" required>
-                </div>
-                <div class="input-container">
-                    <label for="usersEmail">Email:</label>
-                    <input type="email" id="usersEmail" name="usersEmail" placeholder="peterparker@gmail.com" required>
-                </div>
-                <div class="input-container">
-                    <label for="usersMessage">Message:</label>
-                    <textarea id="usersMessage" name="usersMessage" placeholder="Hi, I'm Peter." value="123"
-                        required></textarea><br>
-                </div>
-                <button class="submit-btn" type="submit">Submit</button>
-            </form>
-        </section>
-        <section id="messages">
-            <h2>Messages</h2>
-            <ul></ul>
-        </section>
-        <footer></footer>
-        <script src="js/index.js"></script>
+                </p>
+            </div>
+            <section id="skills">
+                <h2>Skills</h2>
+                <ul></ul>
+            </section>
+            <h1 id="connect"><em>Connect</em></h1>
+            <ul>
+                <li>Email: <a
+                        href="mailto:sabinakazantceva@gmail.com?subject=Hi%20there!">sabinakazantceva@gmail.com</a>
+                </li>
+                <li>GitHub: https://github.com/Sabina-Kazantseva</li>
+                <li>LinkedIn:</li>
+            </ul>
+            <div class="computer-img">
+                <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300"
+                    alt="laptop with a quote on the screen" />
+            </div>
+            <section>
+                <h2 class="message">Leave a Message</h2>
+                <form name="leave_message" class="message-form">
+                    <div class="input-container">
+                        <label for="usersName">Name:</label>
+                        <input type="text" id="usersName" name="usersName" placeholder="Peter Parker" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="usersEmail">Email:</label>
+                        <input type="email" id="usersEmail" name="usersEmail" placeholder="peterparker@gmail.com"
+                            required>
+                    </div>
+                    <div class="input-container">
+                        <label for="usersMessage">Message:</label>
+                        <textarea id="usersMessage" name="usersMessage" placeholder="Hi, I'm Peter." value="123"
+                            required></textarea><br>
+                    </div>
+                    <button class="submit-btn" type="submit">Submit</button>
+                </form>
+            </section>
+            <section id="messages">
+                <h2>Messages</h2>
+                <ul></ul>
+            </section>
+    </main>
+    <footer></footer>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
