Add icons using JS.

--- a/index.html
+++ b/index.html
@@ -71,15 +71,18 @@
             </div>
             <section id="skills">
                 <h2>Skills</h2>
-                <ul></ul>
+                <ul id="skills-list">
+
+                </ul>
             </section>
             <h1 id="connect"><em>Connect</em></h1>
             <ul>
                 <li>Email: <a
                         href="mailto:sabinakazantceva@gmail.com?subject=Hi%20there!">sabinakazantceva@gmail.com</a>
                 </li>
-                <li>GitHub: https://github.com/Sabina-Kazantseva</li>
-                <li>LinkedIn:</li>
+                <li>GitHub: <a href="https://github.com/Sabina-Kazantseva">https://github.com/Sabina-Kazantseva</a></li>
+                <li>LinkedIn:<a href="https://www.linkedin.com/in/sabina-kazantseva
+                    ">LinkedIn Profile</a></li>
             </ul>
             <div class="computer-img">
                 <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8" width="300"
