--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             <h2>Skills</h2>
             <ul id="skills-list"></ul>
         </section>
+        <section>
+            <h2>Projects</h2>
+            <ul>
+            </ul>
+        </section>
         <section id="connect">
             <h1 id="connect"><em>Connect</em></h1>
             <ul>
