--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li class="nav-menu-list-item"><a href="#about">About</a></li>
                     <li class="nav-menu-list-item"><a href="#experience">Experience</a></li>
                     <li class="nav-menu-list-item"><a href="#skills">Skills</a></li>
+                    <li class="nav-menu-list-item"><a href="#projects">Projects</a></li>
                     <li class="nav-menu-list-item"><a href="#connect">Connect</a></li>
-                    <li class="nav-menu-list-item"><a href="#messages">Messages</a></li>
                 </ul>
             </nav>
         </header>
@@ -73,7 +73,7 @@
             <h2>Skills</h2>
             <ul id="skills-list"></ul>
         </section>
-        <section>
+        <section id="projects">
             <h2>Projects</h2>
             <ul>
             </ul>
