--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </section>
         <section id="projects">
             <h2>Projects</h2>
-            <ul>
+            <ul class="projects-list">
             </ul>
         </section>
         <section id="connect">
