--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                 <!-- <ul id="Experience"></ul> -->
                 <p>Preschool teacher: teaching 2-3 years old kids.</p>
                 <p>Computer tutor: helping students at the local college with coding assignments.</p>
+                <p>Client Interaction</p>
+                <p>Version Control</p>
+                <p>Management</p>
+                <p>Problem Solving and Debugging</p>
             </div>
         </section>
         <section id="skills">
@@ -95,14 +99,17 @@
         </section>
         <section id="form">
             <h2 class="form-header">Leave a Message</h2>
-            <form name="leave_message" class="message-form">
-                <div class="input-container">
-                    <label for="usersName">Name:</label>
-                    <input type="text" id="usersName" name="usersName" placeholder="Peter Parker" required>
-                </div>
-                <div class="input-container">
-                    <label for="usersEmail">Email:</label>
-                    <input type="email" id="usersEmail" name="usersEmail" placeholder="peterparker@gmail.com" required>
+            <form class="message-form" name="leave_message">
+                <div class="message-form__inner">
+                    <div class="input-container">
+                        <label for="usersName">Name:</label>
+                        <input type="text" id="usersName" name="usersName" placeholder="Peter Parker" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="usersEmail">Email:</label>
+                        <input type="email" id="usersEmail" name="usersEmail" placeholder="peterparker@gmail.com"
+                            required>
+                    </div>
                 </div>
                 <div class="input-container">
                     <label for="usersMessage">Message:</label>
